a1/brendan_gordon/TEST_PROGRAMS/invalidtype/chia-wei_liu/invalid1.min
var x: int;
var y: float;
var z: int;

x = 5;

y = 0.63;

z = x+y; #this should give error because assigning float to int

